--- a/gui_big.ui
+++ b/gui_big.ui
@@ -16,7 +16,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="label_1">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -34,7 +34,7 @@
     <string>Password length (4-32)</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="lineEdit_1">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -85,7 +85,7 @@
     </font>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="pushButton_1">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -100,7 +100,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Generate</string>
+    <string>&amp;Generate</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_2">
@@ -284,6 +284,9 @@
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>220</x>
@@ -302,6 +305,9 @@
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_4">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>120</x>
@@ -320,11 +326,11 @@
    </property>
   </widget>
   <zorder>groupBox</zorder>
-  <zorder>label</zorder>
-  <zorder>lineEdit</zorder>
+  <zorder>label_1</zorder>
+  <zorder>lineEdit_1</zorder>
   <zorder>label_2</zorder>
   <zorder>textBrowser</zorder>
-  <zorder>pushButton</zorder>
+  <zorder>pushButton_1</zorder>
   <zorder>pushButton_2</zorder>
   <zorder>checkBox_1</zorder>
   <zorder>checkBox_2</zorder>
@@ -337,9 +343,9 @@
   <zorder>pushButton_4</zorder>
  </widget>
  <tabstops>
-  <tabstop>lineEdit</tabstop>
+  <tabstop>lineEdit_1</tabstop>
   <tabstop>lineEdit_2</tabstop>
-  <tabstop>pushButton</tabstop>
+  <tabstop>pushButton_1</tabstop>
   <tabstop>pushButton_4</tabstop>
   <tabstop>pushButton_3</tabstop>
   <tabstop>pushButton_2</tabstop>
